--- a/EngineSimulationLibrary/EngineSimulationLibrary.csproj
+++ b/EngineSimulationLibrary/EngineSimulationLibrary.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0-preview.2.24128.5" />
   </ItemGroup>
 
 </Project>
